[project]
name = "trepublic2json"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ucyo", email = "cayoglu@me.com" }
]
dependencies = [
    "pypdf>=4.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
trepublic2json = 'trepublic2json.bin:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/trepublic2json"]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 151

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = [
    "E501",
    "I",
    "E",
    "W",
    "UP",
]

[tool.ruff.format]
preview = true
